<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/health"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtHealth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/health"/>

        <ImageView
            android:id="@+id/resultHealth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/health"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/percentage"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/percentage"/>

        <ImageView
            android:id="@+id/resultPercentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/percentage"
            app:srcCompat="@drawable/ic_check"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/plugged"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtPlugged"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/plugged"/>

        <ImageView
            android:id="@+id/resultPlugged"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/plugged"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/charging"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtCharging"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/charging"/>

        <ImageView
            android:id="@+id/resultCharging"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/charging"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/technology"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtTechnology"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/technology"/>

        <ImageView
            android:id="@+id/resultTechnology"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/technology"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/temperature"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtTemp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/temperature"/>

        <ImageView
            android:id="@+id/resultTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/temperature"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/voltage"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtVoltage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/voltage"/>

        <ImageView
            android:id="@+id/resultVoltage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/voltage"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

</LinearLayout>