<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/network"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtNetwork"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/network"/>

        <ImageView
            android:id="@+id/resultNetwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/network"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/ip_address"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtIPAddress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/ip_address"/>

        <ImageView
            android:id="@+id/resultIPAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/ip_address"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/bssid"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtBSSID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:text="@string/bssid"/>

        <ImageView
            android:id="@+id/resultBSSID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:contentDescription="@string/bssid"
            app:srcCompat="@drawable/ic_check"/>
    </LinearLayout>
</LinearLayout>